fixed blogpost text truncated

--- a/Source/laravel/resources/assets/sass/modules/blog-post.scss
+++ b/Source/laravel/resources/assets/sass/modules/blog-post.scss
@@ -30,7 +30,6 @@
 
         .title {
             padding: $gap/2 0 $gap/2 $gap/3;
-            display: inline-block;
         }
     }
 
